# dragonglass

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  about.hbs  about.toml  justfile
.github/workflows/: ci.yml
crates/dg-gpu/: Cargo.toml  build.rs
crates/dg-gpu/src/: d3d11_bridge.rs  iosurface_blitter.h  iosurface_blitter.m  iosurface_bridge.rs  lib.rs  unpremul_pass.rs
crates/dg-hud-plugin-win/: Cargo.toml  build.rs
crates/dg-hud-plugin-win/src/: imp.rs  lib.rs
crates/dg-shm/: Cargo.toml
crates/dg-shm/src/: layout.rs  lib.rs  shm.rs
crates/dg-sidecar/: Cargo.toml
crates/dg-sidecar/src/: app.rs  importmap.rs  lib.rs  mac.rs  main.rs  static_server.rs  streams.rs
docs/: ipc.md  mod-ui.md
mod/: Dragonglass.sln  THIRD_PARTY_NOTICES
mod/Dragonglass.Hud/: Dragonglass.Hud.csproj
mod/Dragonglass.Hud/src/: DragonglassHudAddon.cs  EditorStockUiHider.cs  HudRaycastFilter.cs  Layout.cs  NativeBridge.cs  NavBallHider.cs  OverlayCanvas.cs  PortraitCapture.cs  ShmReader.cs  SidecarBootstrap.cs  SidecarHost.cs  StockUiHider.cs
mod/Dragonglass.Hud/src/Patches/: UIPartActionControllerPatch.cs
mod/Dragonglass.Telemetry/: Dragonglass.Telemetry.csproj
mod/Dragonglass.Telemetry/src/: Capabilities.cs  CurrentStageTopicInstaller.cs  EngineTopicInstaller.cs  FlightTopicInstaller.cs  PartCatalogInstaller.cs  PartGoneBus.cs  PawBus.cs  PawTopicInstaller.cs  PortraitsTopicInstaller.cs  StageTopicInstaller.cs  SubscriptionBus.cs  TelemetryAddon.cs
mod/Dragonglass.Telemetry/src/Topics/: ClockTopic.cs  ConfigTopic.cs  CurrentStageTopic.cs  EditorStateTopic.cs  EngineTopic.cs  FlightTopic.cs  GameTopic.cs  OpDispatcher.cs  PartCatalogTopic.cs  PartIconCapture.cs  PartSubscriptionManager.cs  PartTopic.cs  PawTopic.cs  PortraitsTopic.cs  StageTopic.cs  Topic.cs  TopicBroadcaster.cs  TopicRegistry.cs
mod/Dragonglass.Telemetry/src/Util/: Json.cs
mod/Dragonglass.Telemetry/src/WebSocket/: ManagedWebSocketFactory.cs  WebSocketConnection.cs  WebSocketHandshake.cs  WebSocketServer.cs
mod/native/darwin-universal/include/: IUnityGraphics.h  IUnityGraphicsMetal.h  IUnityInterface.h
mod/native/darwin-universal/src/: DgHudNative.mm
mod/native/darwin-universal/test/: smoke.c
ui/: package-lock.json  package.json  tsconfig.json
ui/apps/stock/: index.html  package.json  vite.config.ts
ui/apps/stock/src/: App.svelte
ui/apps/stock/src/screens/: EditorHUD.svelte  PartCatalogPanel.svelte  ScenePlaceholder.svelte
ui/apps/stock/src/screens/FlightHUD/: ContextMenu.svelte  CurvedTape.svelte  EngineIcon.svelte  FlightHUD.css  FlightHUD.svelte  Navball.svelte  NavballIndicator.svelte  NavballSphere.svelte  OrbitalMarkers.svelte  PartActionWindow.svelte  PartActionWindowHost.svelte  PortraitGallery.svelte  Propulsion.css  Propulsion.svelte  StageCard.svelte  StagingIcon.svelte  StagingStack.svelte  context-menu.ts  engine-groups.ts  engine-map.ts  format.ts  navball-textures.ts  resource-names.ts  stage-render.ts  staging-actions.ts  tape-scales.ts
ui/apps/workbench/: index.html  package.json
ui/apps/workbench/src/: App.svelte  main.ts
ui/apps/workbench/src/screens/EngineeringPanel/: AccStat.svelte  AttitudeAccordion.svelte  CategoryGroup.svelte  CategorySummaryInline.svelte  DetailRowView.svelte  EmptyBody.svelte  EngineeringPanel.css  EngineeringPanel.svelte  EnginesAccordion.svelte  PartCard.svelte  PartDetail.svelte  helpers.ts  (+12 more)
ui/runtime/: package.json  vite.config.ts
ui/runtime/src/: instruments.ts  stock.ts  svelte-internal-client.ts  svelte-internal-disclose-version.ts  svelte-internal-flags-legacy.ts  svelte-internals.d.ts  svelte-motion.ts  telemetry-core.ts  telemetry-dragonglass.ts  telemetry-simulated.ts  telemetry-smoothing.ts  telemetry-svelte.ts  threlte.ts  windows.ts
(+31 files in other folders)
