[package]
name = "dg-gpu"
description = "GPU texture sharing via IOSurface/Metal for CEF frame transport"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false }
objc2-io-surface = { version = "0.3", features = ["IOSurfaceRef"] }

[build-dependencies]
cc = "1"
